<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:src="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="@dimen/posts_title_font_size"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="@dimen/tap_size"
        android:layout_height="@dimen/tap_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:checkable="true"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/ic_dots_menu_24"
        style="@style/Theme.NMedia.MenuButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:gravity="start|top"
        android:textSize="@dimen/posts_text_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        tools:text="@sample/posts.json/data/content"
        tools:gravity="start|top"/>

    <ImageView
        android:id="@+id/video"
        android:layout_width="@dimen/posts_video_preview_width"
        android:layout_height="@dimen/posts_video_preview_height"
        android:visibility="gone"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier_footer"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="like, share, viewed"
        app:layout_constraintTop_toBottomOf="@id/video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_footer"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_24dp"
        style="@style/Theme.NMedia.LikeButton"
        tools:text="15"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        android:checkable="true"
        android:contentDescription="@string/description_post_share"
        app:icon="@drawable/ic_share_24"
        style="@style/Theme.NMedia.ShareViewedButton"
        tools:text="15"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_footer"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        android:checkable="false"
        android:contentDescription="@string/description_post_viewed"
        app:icon="@drawable/ic_viewed_24"
        style="@style/Theme.NMedia.ShareViewedButton"
        tools:text="15"/>

</androidx.constraintlayout.widget.ConstraintLayout>